# ampi

./: CMakeLists.txt  README.md  ampi-config.cmake.in
include/ampi/: async_msgpack.hpp  async_msgunpack.hpp  buffer.hpp  event.hpp  event_endpoints.hpp  exception.hpp  istream.hpp  manipulator.hpp  msgpack.hpp  ostream.hpp  piecewise_view.hpp  transmute.hpp  utf8_validator.hpp  value.hpp  vocabulary.hpp
include/ampi/asio/: as_tuple.hpp  with_as_default_on.hpp
include/ampi/buffer_sinks/: async_stream_buffer_sink.hpp  container_buffer_sink.hpp  ostream_buffer_sink.hpp
include/ampi/buffer_sources/: async_stream_buffer_source.hpp  buffer_source.hpp  istream_buffer_source.hpp  one_buffer_source.hpp
include/ampi/coro/: awaiter_wrapper.hpp  coro_handle_owner.hpp  coroutine.hpp  stdcoro.hpp  traits.hpp  use_coroutine.hpp
include/ampi/detail/: fixed_msgpack_buffer_factory.hpp  hana_struct.hpp  msgpack_ctx_base.hpp  msgunpack_ctx_base.hpp  pfr_tuple.hpp
include/ampi/event_sinks/: event_sink.hpp  hana_struct.hpp  pfr_tuple.hpp
include/ampi/event_sources/: event_source.hpp  hana_struct.hpp  pfr_tuple.hpp
include/ampi/execution/: executor.hpp  executor_wrapper.hpp  prefer.hpp  query.hpp  require.hpp  traits.hpp
include/ampi/filters/: emitter.hpp  parser.hpp
include/ampi/hash/: flat_map.hpp  span.hpp  time_point.hpp  vector.hpp
include/ampi/pmr/: reusable_monotonic_buffer_resource.hpp  segmented_stack_resource.hpp  shared_polymorphic_allocator.hpp  trivially_deallocatable_resource.hpp
include/ampi/pmr/detail/: block_list_resource.hpp
include/ampi/utils/: bit.hpp  compare.hpp  empty_subobject.hpp  flags.hpp  format.hpp  ref_counted_base.hpp  repeated.hpp  stdtypes.hpp  tag_invoke.hpp  tagged_pointer.hpp
src/: event.cpp  event_endpoints.cpp  exception.cpp  piecewise_view.cpp  utf8_validator.cpp  value.cpp
src/filters/: parser.cpp
src/pmr/: reusable_monotonic_buffer_resource.cpp  segmented_stack_resource.cpp  shared_polymorphic_allocator.cpp  trivially_deallocatable_resource.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt
tests/common/include/ampi/tests/: ut_helpers.hpp
tests/common/src/: main.cpp
tests/coroutines/: CMakeLists.txt
tests/coroutines/src/: main.cpp
tests/example/: CMakeLists.txt
tests/example/src/: main.cpp
tests/serialize/: CMakeLists.txt
tests/serialize/src/: main.cpp
