# Copyright 2021 Pavel A. Lebedev
# Licensed under the Apache License, Version 2.0.
# (See accompanying file LICENSE.txt or copy at
#  http://www.apache.org/licenses/LICENSE-2.0)
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(common)
add_subdirectory(coroutines)
add_subdirectory(example)
add_subdirectory(serialize)
